--- a/.github/workflows/cml.yaml
+++ b/.github/workflows/cml.yaml
@@ -1,30 +1,27 @@
-name: CML
+name: wine-jfc
 on: [push]
 jobs:
-  train-and-report:
+  run:
     runs-on: ubuntu-latest
-    # optionally use a convenient Ubuntu LTS + DVC + CML container
-    # container: docker://ghcr.io/iterative/cml:0-dvc2-base1
+    # optionally use a convenient Ubuntu LTS + DVC + CML image
+    container: ghcr.io/iterative/cml:0-dvc2-base1
     steps:
-      # may need to setup Node.js & Python3 on e.g. self-hosted
-      # - uses: actions/setup-node@v2
+      - uses: actions/checkout@v3
+      # may need to setup NodeJS & Python3 on e.g. self-hosted
+      # - uses: actions/setup-node@v3
       #   with:
       #     node-version: '16'
       # - uses: actions/setup-python@v4
       #   with:
       #     python-version: '3.x'
       - uses: iterative/setup-cml@v1
-      - uses: actions/checkout@v3
-      - name: Train model
-        run: |
-          # Your ML workflow goes here
-          pip install -r requirements.txt
-          python train.py  # generate plot.png
-      - name: Create CML report
+      - name: cml_run
         env:
           REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Post CML report as a comment in GitHub
-          cat metrics.txt >> report.md
-          echo '![](./plot.png "Confusion Matrix")' >> report.md
-          cml comment create report.md
+          # Your ML workflow goes here
+          pip install -r requirements.txt
+          python train.py
+          
+          echo "METRICAS DEL MODELO"
+          cat metrics.txt
